src/main/java/org/example/interfaces/segregation/bad/Main.java
package org.example.interfaces.segregation.bad;

//Create Java interfaces in such a way that Client only implements THIN interface,
//client should not be forced to implement interfaces where methods don't mean anything
//to the client. (relevant methods) client should implement relevant method.

public class Main {

    public static void main(String[] args) {
        System.out.println("Hello world.");
    }
}
